[package]
name = "vsock-manager"
version = "0.1.0"
authors = ["huangsiyuan <huangsiyuan@kylinos.cn>"]
edition = "2024"

[dependencies]
dashmap = "6.1.0"
anyhow = "1.0.100"
bincode = "2.0.1"
vsock = "0.5"
bytemuck = { version = "1.24.0", features = ["derive"] }

mbedtls = { git = "https://gitee.com/openkylin/rust-mbedtls.git", branch = "smx-mbedtls-sys-auto_v2.28.12", default-features = false, features = [
    "std",
    "ssl",
] }
mbedtls-sys-auto = { git = "https://gitee.com/openkylin/rust-mbedtls.git", branch = "smx-mbedtls-sys-auto_v2.28.12", package = "mbedtls-sys-auto", default-features = false }
